@@ -1,5 +1,13 @@
 2011-04-13  Sergio Martin <sergio.martin@artica.es>
 
+	* include/functions_graph.php
+	include/graphs/functions_gd.php
+	include/graphs/fgraph.php: Enabled dual way to
+	call gd graphics: through url and thorugh call 
+	to function
+
+2011-04-13  Sergio Martin <sergio.martin@artica.es>
+
 	* include/graphs/functions_pchart.php: Restored Miguel
 	code erased by me in the last commit and improved the
 	legend system to show it in horizontal when is possible
